Preparing to Change to Cursor Adapter/Sync Adapter
Made the necessary changes to start implementing cursor adapter for the
main poster grid layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="sort_most_popular">Most Popular</string>
     <string name="sort_highest_rated">Highest Rated</string>
     <string name="sort_highest_revenue">Highest Revenue</string>
+
+    <string name="content_authority">phil.nanodegree.com.popularmovies</string>
 </resources>
